# mashelper-backend

./: .gitignore  Pipfile  manage.py  pyproject.toml  requirements.txt
core/: settings.py  urls.py
core/templates/core/: index.html
mashelper/: asgi.py  urls.py  wsgi.py
mashelper/settings/: common.py  dev.py  prod.py
material_db_mgr/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
material_db_mgr/migrations/: 0001_initial.py  0002_alter_materiallineitem_quantity.py
